# AgentOS

./: .env.example  .gitignore  AGENTOS_ANALYSIS_REPORT.md  AOS-001_Architecture.md  AOS-002_API_Contract.md  AOS-002_Architecture.md  AOS-002_Security_Requirements.md  AOS-003_ML_Design.md  AOS-004_Architecture.md  AOS-004_Security_Requirements.md  AOS-005_API_Contract.md  AOS-006_Data_Design.md  AOS-007_Implementation_Spec.md  AOS-008_Implementation_Spec.md  AOS-009_Architecture.md  AOS-010_Verification_Plan.md  AOS-011_012_013_Architecture.md  AOS-011_012_Architecture.md  AOS-012_Security_Requirements.md  AOS-013_014_ML_Design.md  AOS-014_015_016_Architecture.md  AOS-015_018_Architecture.md  AOS-017_018_Architecture.md  AOS-019_Verification_Plan.md  AOS-020_021_Architecture.md  AOS-022_027_UX_Design.md  AOS-028_030_DevOps_Spec.md  AOS-032_038_Architecture.md  AOS-041_050_Architecture.md  AOS-051_060_Architecture.md  AOS-061_070_Architecture.md  AOS-071_079_Architecture.md  AOS-080_088_Architecture.md  AOS-089_098_Architecture.md  AUDIT_CORE_FEATURES.md  AUDIT_FINAL_REPORT.md  AUDIT_R150.md  AUDIT_V5.md  AgentOS_Product_Specification.docx  AgentOS_Sprint_Plan_Phase1.md  (+66 more)
src-tauri/: Cargo.toml  branding.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/marketplace/: index.json
src-tauri/playbooks/: auto-shutdown.json  battery-report.json  browser-cleanup.json  clipboard-history.json  currency-convert.json  daily-backup.json  disk-cleanup.json  docker-status.json  email-check.json  env-dump.json  file-search.json  git-daily-report.json  git-status.json  log-tail.json  morning-briefing.json  news-headlines.json  npm-audit.json  port-scanner.json  price-check.json  process-killer.json  reminder-set.json  screenshot-capture.json  slack-status.json  smart-file-processor.json  smart-installer.json  startup-manager.json  stock-price.json  system-info.json  weather-check.json  web-search.json  wikipedia-lookup.json  window-organizer.json
src-tauri/plugins/clipboard-action/: clipboard.ps1  plugin.json
src-tauri/plugins/docker-executor/: docker.ps1  plugin.json
src-tauri/plugins/system-monitor/: monitor.ps1  plugin.json
src-tauri/src/: health.rs  lib.rs  main.rs  python_process.rs  types.rs
src-tauri/src/accessibility/: manager.rs  mod.rs
src-tauri/src/agent_loop/: compaction.rs  mod.rs  runtime.rs  session.rs  sub_agent.rs  types.rs
src-tauri/src/agents/: hierarchy.rs  mod.rs  registry.rs
src-tauri/src/analytics/: export.rs  heatmap.rs  mod.rs  pro.rs  roi.rs
src-tauri/src/api/: auth.rs  mod.rs  routes.rs  server.rs  worker_routes.rs
src-tauri/src/approvals/: mod.rs  workflow.rs
src-tauri/src/automation/: mod.rs  nl_triggers.rs  scheduler.rs
src-tauri/src/autonomous/: compliance_auto.rs  data_entry.rs  inbox.rs  mod.rs  procurement.rs  qa.rs  reconciliation.rs  reporting.rs  scheduling.rs  support.rs
src-tauri/src/billing/: creator_payments.rs  limits.rs  mod.rs  plans.rs  stripe.rs
src-tauri/src/brain/: classifier.rs  gateway.rs  local_llm.rs  mod.rs  prompt_cache.rs  providers.rs  router.rs  stream.rs  types.rs
src-tauri/src/branding/: config.rs  mod.rs
src-tauri/src/browser_ext/: bridge.rs  mod.rs
src-tauri/src/business/: automations.rs  dashboard.rs  mod.rs  orchestration.rs  revenue.rs
src-tauri/src/cache/: benchmarks.rs  mod.rs
src-tauri/src/chains/: intervention.rs  mod.rs
src-tauri/src/channels/: discord.rs  mod.rs  telegram.rs  webhook.rs  whatsapp.rs
src-tauri/src/compliance/: gdpr.rs  mod.rs  privacy.rs  reporter.rs  retention.rs
src-tauri/src/config/: mod.rs  routing.rs  settings.rs
src-tauri/src/conversations/: chain.rs  mod.rs
src-tauri/src/coordinator/: mod.rs  (+9 more)
src-tauri/templates/: daily-standup.md  follow-up-email.md  invoice-summary.md  monthly-report.md  project-status.md
src-tauri/tests/: pipeline_tests.rs
(+1020 files in other folders)
